welcome.lessons.welcome.array.basics.Array1.scala.error
Array1:3: error: value foreach is not a member of Int
  for (cpt <- (getMondeLargeur())) {
                              ^Array1:12: error: type mismatch;
 found   : Unit
 required: java.awt.Color
	T(0)=setCouleurBrosse(Color.RED)
                             ^Array1:13: error: type mismatch;
 found   : Unit
 required: java.awt.Color
	T(1)=setCouleurBrosse(Color.CYAN)
                             ^Array1:14: error: type mismatch;
 found   : Unit
 required: java.awt.Color
	T(2)=setCouleurBrosse(Color.GREEN)
                             ^Array1:15: error: type mismatch;
 found   : Unit
 required: java.awt.Color
	T(3)=setCouleurBrosse(Color.MAGENTA)
                             ^Array1:16: error: type mismatch;
 found   : Unit
 required: java.awt.Color
	T(4)=setCouleurBrosse(Color.ORANGE)
                             ^Array1:17: error: type mismatch;
 found   : Unit
 required: java.awt.Color
	T(5)=setCouleurBrosse(Color.PINK)
                             ^Array1:20: error: type mismatch;
 found   : Unit
 required: java.awt.Color
  T(0)=setCouleurBrosse(Color.PINK)
                       ^Array1:21: error: type mismatch;
 found   : Unit
 required: java.awt.Color
	T(1)=setCouleurBrosse(Color.YELLOW)
                             ^Array1:22: error: type mismatch;
 found   : Unit
 required: java.awt.Color
	T(2)=setCouleurBrosse(Color.RED)
                             ^Array1:23: error: type mismatch;
 found   : Unit
 required: java.awt.Color
	T(3)=setCouleurBrosse(Color.ORANGE)
                             ^Array1:24: error: type mismatch;
 found   : Unit
 required: java.awt.Color
	T(4)=setCouleurBrosse(Color.MAGENTA)
                             ^Array1:25: error: type mismatch;
 found   : Unit
 required: java.awt.Color
	T(5)=setCouleurBrosse(Color.GREEN)
                             ^Array1:26: error: type mismatch;
 found   : Unit
 required: java.awt.Color
  T(0)=setCouleurBrosse(Color.CYAN)
                       ^Array1:29: error: type mismatch;
 found   : Unit
 required: java.awt.Color
  T(0)=setCouleurBrosse(Color.RED)
                       ^Array1:30: error: type mismatch;
 found   : Unit
 required: java.awt.Color
  T(1)=setCouleurBrosse(Color.GREEN)
                       ^Array1:31: error: type mismatch;
 found   : Unit
 required: java.awt.Color
  T(2)=setCouleurBrosse(Color.ORANGE)
                       ^Array1:32: error: type mismatch;
 found   : Unit
 required: java.awt.Color
  T(3)=setCouleurBrosse(Color.YELLOW)
                       ^Array1:33: error: type mismatch;
 found   : Unit
 required: java.awt.Color
  T(4)=setCouleurBrosse(Color.BLACK)
                       ^Array1:34: error: type mismatch;
 found   : Unit
 required: java.awt.Color
  T(5)=setCouleurBrosse(Color.PINK)
                       ^Array1:35: error: type mismatch;
 found   : Unit
 required: java.awt.Color
  T(6)=setCouleurBrosse(Color.MAGENTA)
                       ^Array1:36: error: type mismatch;
 found   : Unit
 required: java.awt.Color
  T(7)=setCouleurBrosse(Color.CYAN)
                       ^Array1:46: error: type mismatch;
 found   : java.awt.Color
 required: Int
  	T(i)
          ^Array1:47: error: Unit does not take parameters
  	marquerSol()
                  ^